FIX: more visibility for all fonts

--- a/frontend/client/src/style/base/_base.scss
+++ b/frontend/client/src/style/base/_base.scss
@@ -4,6 +4,8 @@
 
 body{
     font-family: "Lato", sans-serif;
+    font-style: normal;
+    font-weight: bolder;
 }
 
 * {
